# slack-app

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/: release.yml
.github/ISSUE_TEMPLATE/: issue-bug.yml  issue-feature.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: codeql.yml  docker-publish.yml  python-run-tests.yml  release.yml  snyk.yml
api_interface/: api_interface.py
bot/: app.py  config.py  fo76.py  messages.py  slack.py
bot/data/: hello_messages.json
docs/: deployment.md  development.md  miscellanea.md  running-slack-app.md
scripts/: run-in-docker.sh
slackapp/: app.py
slackapp/api_interface/: api_interface.py
slackapp/bot/: config.py  fo76.py  messages.py  slack.py
slackapp/metrics/: metrics.py
tests/: test_fo76.py  test_messages.py
tests/bot/: test_fo76.py  test_messages.py
tests/test_data/: test_messages.json
